expense-app/src/objects/Telegram_Bot_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Access_Token__c</fullName>
        <description>Access token your bot</description>
        <label>Access Token</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bot_Method__c</fullName>
        <description>Calling method</description>
        <label>Bot Method</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conection_Domain__c</fullName>
        <description>Telegram Domain</description>
        <label>Conection Domain</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Telegram Bot Setings</label>
    <pluralLabel>Telegram Bots Setings</pluralLabel>
</CustomObject>